Fix alignment and margins

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -18,6 +18,7 @@
 .flex-row-container {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 /* questionnaires Vue components */
